--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,12 +18,7 @@
               },
               {
                 "sourceTag": "type:feature",
-                "onlyDependOnLibsWithTags": [
-                  "type:feature",
-                  "type:ui",
-                  "type:util",
-                  "type:data-access"
-                ]
+                "onlyDependOnLibsWithTags": ["type:feature", "type:ui", "type:util", "type:data-access"]
               },
               {
                 "sourceTag": "type:ui",
