--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,21 +15,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@minta-ltd-recruit-platform/api-client": [
-        "libs/frontend/api-client/src/index.ts"
-      ],
-      "@minta-ltd-recruit-platform/home/data-access": [
-        "libs/frontend/home/data-access/src/index.ts"
-      ],
-      "@minta-ltd-recruit-platform/home/feature": [
-        "libs/frontend/home/feature/src/index.ts"
-      ],
-      "@minta-ltd-recruit-platform/home/ui": [
-        "libs/frontend/home/ui/src/index.ts"
-      ],
-      "@minta-ltd-recruit-platform/home/util": [
-        "libs/frontend/home/util/src/index.ts"
-      ]
+      "@minta-ltd-recruit-platform/api-client": ["libs/frontend/api-client/src/index.ts"],
+      "@minta-ltd-recruit-platform/home/data-access": ["libs/frontend/home/data-access/src/index.ts"],
+      "@minta-ltd-recruit-platform/home/feature": ["libs/frontend/home/feature/src/index.ts"],
+      "@minta-ltd-recruit-platform/home/ui": ["libs/frontend/home/ui/src/index.ts"],
+      "@minta-ltd-recruit-platform/home/util": ["libs/frontend/home/util/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
